Fix scrollbars with custom stage size

--- a/src-renderer-webpack/editor/gui/gui.css
+++ b/src-renderer-webpack/editor/gui/gui.css
@@ -4,8 +4,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  min-width: 1024px;
-  min-height: 640px;
 }
 a {
   color: #25d;
